# seance

./: .gitignore  Cargo.toml  README.md  build-ouija-deb.sh  build-planchette.sh  cargo-tauri.nix  clippy.toml  flake.nix  rust-toolchain.toml
app/: Cargo.toml  build.rs
app-html/: index.html  ui.css  ui.js
app-tauri/: Cargo.toml  tauri.conf.json
app-tauri/src/: lib.rs
app/src/: app.rs  main.rs
app/src/app/: preview.rs
ouija/DEBIAN/: control  cupsd.conf  ouija.install  postinst  printers.conf
packaging/: Cargo.toml  README.md
packaging/src/: main.rs
planchette/: Cargo.toml  deb-control-arm64  deb-control-armhf  deb-control-x86_64
planchette-deb/DEBIAN/: control  postinst
planchette-deb/etc/systemd/system/: planchette.service
planchette/src/: lib.rs  main.rs
seance/: Cargo.toml
seance/src/: bed.rs  default_passes.rs  hpgl.rs  laser_passes.rs  lib.rs  main.rs  paths.rs  pcl.rs  svg.rs
seance/tests/: hpgl_snapshots.rs  pcl_snapshots.rs  snapshot_tests.rs
seance/tests/snapshots/: hpgl_snapshots__york hackspace logo SVG HPGL output.snap  pcl_snapshots__york hackspace logo SVG PCL output.snap  snapshot_tests__logo HPGL output.snap  snapshot_tests__logo PCL output.snap  snapshot_tests__logo plotted paths.snap  snapshot_tests__rectangle HPGL output.snap  snapshot_tests__rectangle PCL output.snap  snapshot_tests__rectangle plotted paths.snap  snapshot_tests__york hackspace logo PCL output.snap  snapshot_tests__york hackspace logo SVG paths.snap  snapshot_tests__york hackspace logo resolved paths.snap
src/: app.rs  default_passes.rs  hpgl.rs  laser_passes.rs  lib.rs  main.rs  paths.rs  pcl.rs  svg.rs
src/app/: preview.rs
