[package]
name = "seance"
version = "0.1.0"
edition = "2021"
include = ["**/*.rs", "Cargo.toml"]
rust-version = "1.76"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[lints.rust]
missing_docs = "deny"

[lints.clippy]
rust_2018_idioms = "warn"
manual_assert = "deny"
missing_assert_message = "deny"
disallowed_macros = "deny"
doc_markdown = "deny"
missing_docs_in_private_items = "deny"
pedantic = "deny"

[dependencies]
egui = "0.28"
eframe = { version = "0.28", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
] }
log = "0.4"

serde = { version = "1", features = ["derive"] }
serde_json = "1.0.120"
egui_extras = { version = "0.28.1", features = ["all_loaders"] }
egui_dnd = "0.9.0"
env_logger = "0.10"
rfd = "0.14.1"
lyon_algorithms = "1.0.4"
resvg = "0.43.0"
oneshot = { version = "0.1.8", default-features = false, features = ["std"] }
ascii = "1.1.0"
tempfile = "3.12.0"

[target.'cfg(windows)'.dependencies]
hidapi-rusb = "1.3.3"
windows = { version = "0.58.0" }
usb_enumeration = "0.2.0"

[profile.release]
opt-level = 2

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
