[workspace]
resolver = "2"
members = ["seance"]
default-members = ["seance"]

[workspace.package]
edition = "2021"
include = ["**/*.rs", "Cargo.toml"]
rust-version = "1.83"

[workspace.lints.rust]
missing_docs = "deny"

[workspace.lints.clippy]
rust_2018_idioms = "warn"
manual_assert = "deny"
missing_assert_message = "deny"
disallowed_macros = "deny"
doc_markdown = "deny"
missing_docs_in_private_items = "deny"
pedantic = "deny"

[profile.release]
opt-level = 2

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
