[workspace]
resolver = "2"
members = [ "app","seance", "planchette"]
default-members = ["app", "planchette"]

[workspace.package]
edition = "2021"
include = ["**/*.rs", "Cargo.toml"]
rust-version = "1.83"

[workspace.lints.clippy]
manual_assert = "deny"
missing_assert_message = "deny"
disallowed_macros = "deny"
doc_markdown = "deny"
too_many_arguments = "allow"

[profile.release]
opt-level = 2

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.120"
usvg = "0.45.0"
