[package]
name = "seance-app"
version = "0.1.0"
edition.workspace = true
include.workspace = true
rust-version.workspace = true

[dependencies]
eframe = { version = "0.28", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "wgpu",
    "persistence",
    "x11",
    "wayland"
] }
egui = "0.28"
egui_dnd = "0.9.0"
egui_extras = { version = "0.28.1", features = ["all_loaders"] }
env_logger = "0.10"
log = "0.4"
oneshot = { version = "0.1.8", default-features = false, features = ["std"] }
rfd = "0.14.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.120"
seance = { path = "../seance" }
usvg.workspace = true

[lints]
workspace = true
