[package]
name = "seance-app"
version = "0.1.0"
edition.workspace = true
include.workspace = true
rust-version.workspace = true

[dependencies]
eframe = { version = "0.31.1", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
    "x11",
    "wayland"
] }
egui = "0.31.1"
egui_dnd = "0.12.0"
egui_extras = { version = "0.31.1", features = ["all_loaders"] }
env_logger = "0.10"
log = "0.4"
oneshot = { version = "0.1.8", default-features = false, features = ["std"] }
planchette = { path = "../planchette" }
reqwest = { version = "0.12.15", features = ["blocking", "json"], default-features = false }
rfd = "0.14.1"
serde.workspace = true
serde_json.workspace = true
usvg.workspace = true

[build-dependencies]
image = "0.25.5"
resvg = "0.45.0"

[lints]
workspace = true
