[package]
name = "seance"
version = "0.1.0"

edition.workspace = true
include.workspace = true
rust-version.workspace = true
lints.workspace = true

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
log = "0.4"

serde = { version = "1", features = ["derive"] }
lyon_algorithms = "1.0.4"
resvg = "0.43.0"
ascii = "1.1.0"

[target.'cfg(windows)'.dependencies]
hidapi-rusb = "1.3.3"
windows = { version = "0.58.0" }
usb_enumeration = "0.2.0"
