[package]
name = "seance"
version = "0.1.0"

edition.workspace = true
include.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
ascii = "1.1.0"
log = "0.4"
lyon_algorithms = "1.0.4"
serde = { version = "1", features = ["derive"] }
usvg.workspace = true
